@@ -22,6 +22,8 @@
  * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
+typedef struct OpaqueJSContext* JSGlobalContextRef;
+
 @class WebScriptWorldPrivate;
 
 @interface WebScriptWorld : NSObject {
@@ -31,4 +33,7 @@
 
 + (WebScriptWorld *)standardWorld;
 + (WebScriptWorld *)world;
+
++ (WebScriptWorld *)scriptWorldForGlobalContext:(JSGlobalContextRef)globalContext;
+
 @end
