@@ -51,6 +51,7 @@ private:
 
     virtual HRESULT STDMETHODCALLTYPE QueryInterface(REFIID, void** ppvObject);
     virtual HRESULT STDMETHODCALLTYPE standardWorld(IWebScriptWorld**);
+    virtual HRESULT STDMETHODCALLTYPE scriptWorldForGlobalContext(JSGlobalContextRef, IWebScriptWorld**);
 
     ULONG m_refCount;
     RefPtr<WebCore::DOMWrapperWorld> m_world;
