@@ -1,3 +1,14 @@
+2010-01-19  Dave Hyatt  <hyatt@apple.com>
+
+        Reviewed by Adam Roben.
+
+        Add an API to obtain a WebScriptWorld from a JSGlobalContextRef.
+
+        * Interfaces/IWebScriptWorld.idl:
+        * WebScriptWorld.cpp:
+        (WebScriptWorld::scriptWorldForGlobalContext):
+        * WebScriptWorld.h:
+
 2010-01-18  Adam Roben  <aroben@apple.com>
 
         Add IWebViewPrivate::setDomainRelaxationForbiddenForURLScheme
